--- a/index.html
+++ b/index.html
@@ -1,106 +1,367 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio - Santiago Pimas</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Portfolio Santiago Pimas</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: "Poppins", sans-serif;
+        background: #000;
+        display: flex;
+        justify-content: center;
+    }
+
+    .canvas {
+        width: 900px;
+        background-image: url("background.jpg");
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+        min-height: 100vh;
+        color: white;
+        padding-bottom: 80px;
+    }
+
+    .header {
+        text-align: center;
+        padding-top: 60px;
+    }
+
+    .header h1 {
+        font-size: 48px;
+        font-weight: 600;
+    }
+
+    .header h1 span {
+        color: #00ff66;
+    }
+
+    .header .subtitle {
+        margin-top: 10px;
+        font-size: 18px;
+        opacity: 0.85;
+    }
+
+    .header .desc {
+        margin-top: 20px;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 16px;
+        opacity: 0.9;
+        line-height: 1.5;
+    }
+
+    h2 {
+        margin-top: 70px;
+        font-size: 40px;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    .sub {
+        margin-top: 10px;
+        text-align: center;
+        font-size: 16px;
+        opacity: 0.85;
+    }
+
+    .triple {
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        gap: 25px;
+        padding: 0 40px;
+    }
+
+    .card {
+        background: white;
+        width: 250px;
+        padding: 25px;
+        border-radius: 25px;
+        color: #000;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.35);
+    }
+
+    .card-icon {
+        font-size: 40px;
+        text-align: center;
+        margin-bottom: 10px;
+        color: #00aaff;
+    }
+
+    .card-title {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 10px;
+    }
+
+    .card p {
+        font-size: 14px;
+        text-align: center;
+    }
+
+    .bigbox {
+        margin: 50px auto 0;
+        background: white;
+        color: #000;
+        width: 70%;
+        padding: 30px;
+        border-radius: 25px;
+        text-align: center;
+        font-size: 16px;
+        line-height: 1.55;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.35);
+    }
+
+    .skills-grid {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+        align-items: center;
+        width: 100%;
+    }
+
+    .skill-box {
+        background: white;
+        width: 70%;
+        padding: 25px;
+        border-radius: 25px;
+        color: #000;
+        text-align: center;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.35);
+    }
+
+    .skill-box.small {
+        width: 40%;
+    }
+
+    .skill-title {
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 10px;
+    }
+
+    .tags {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 15px;
+    }
+
+    .tag {
+        background: #f0f0f0;
+        padding: 6px 14px;
+        border-radius: 12px;
+        font-size: 14px;
+    }
+
+    .proj-row {
+        margin-top: 50px;
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        padding: 0 40px;
+    }
+
+    .project {
+        background: white;
+        width: 220px;
+        padding: 25px;
+        border-radius: 25px;
+        text-align: center;
+        color: #000;
+        font-size: 14px;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.35);
+    }
+
+    .proj-icon img {
+        width: 80px;
+        height: 80px;
+        object-fit: contain;
+        border-radius: 15px;
+        display: block;
+        margin: auto;
+    }
+
+    .project-title {
+        margin-top: 15px;
+        font-size: 18px;
+        font-weight: 600;
+    }
+
+    .contact-title {
+        margin-top: 100px;
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .contact-sub {
+        margin-top: 10px;
+        text-align: center;
+        font-size: 16px;
+        opacity: 0.85;
+    }
+
+    .contact-box {
+        margin: 40px auto 0;
+        width: 60%;
+        background: white;
+        color: #000;
+        padding: 25px;
+        border-radius: 25px;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.35);
+        text-align: center;
+    }
+
+    .contact-box h3 {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .contact-box p {
+        margin-top: 12px;
+        font-size: 14px;
+    }
+
+</style>
 </head>
 <body>
 
-  <header>
-    <h1>Hola, soy <span>Santiago Pimas</span></h1>
-    <p>Estudiante de Secundaria</p>
-    <p>Apasionado por la tecnología, el aprendizaje y la innovación. Siempre buscando nuevas oportunidades para crecer y desarrollar mis habilidades.</p>
-  </header>
+<div class="canvas">
 
-  <section id="sobre-mi">
+    <div class="header">
+        <h1>Hola, soy <span>Santiago Pimas</span></h1>
+        <p class="subtitle">Estudiante de Secundaria</p>
+        <p class="desc">
+            Apacionado por la tegnologia, el aprendizaje y la innovacion. 
+            Siempre buscando nuevas oportunidades para crecer y desarrolar mis habilidades.
+        </p>
+    </div>
+
     <h2>Sobre mi</h2>
-    <p>Conoce un poco más sobre mi trayectoria y mis intereses</p>
+    <p class="sub">Conoce un poco mas sobre mi trayectoria y mis intereses</p>
 
-    <div class="cards">
-      <div class="card">
-        <h3>Educación</h3>
-        <p>Actualmente cursando el secundario con muy buenas notas y mucha participación en clase.</p>
-      </div>
-      <div class="card">
-        <h3>Objetivos</h3>
-        <p>Desarrollar habilidades profesionales y ganar experiencia en el mundo laboral.</p>
-      </div>
-      <div class="card">
-        <h3>Pasiones</h3>
-        <p>Tecnología, aprender, trabajo en equipo y resolver problemas.</p>
-      </div>
+    <div class="triple">
+
+        <div class="card">
+            <div class="card-icon">📘</div>
+            <div class="card-title">Educacion</div>
+            <p>Actualmentente cursando el secundario con muy buenas notas y mucha participacion en clase.</p>
+        </div>
+
+        <div class="card">
+            <div class="card-icon">🎯</div>
+            <div class="card-title">Objetivos</div>
+            <p>Desarrollar habilidades profecionales y ganar experiencia en el mundo laboral.</p>
+        </div>
+
+        <div class="card">
+            <div class="card-icon">💙</div>
+            <div class="card-title">Paciones</div>
+            <p>Tegnologia, aprender, trabajo en equipo y resolver problemas.</p>
+        </div>
+
     </div>
 
-    <div class="card texto-central">
-      <p>Soy un estudiante motivado y responsable con gran interés en aprender y crecer profesionalmente. Me caracterizo por mi actitud y mi compromiso en cada proyecto que realizo. Busco oportunidades que me permitan aplicar lo que sé y aprender nuevas habilidades.</p>
+    <div class="bigbox">
+        Soy un estudiante motivado y responsable con gran interes 
+        en aprender y crecer profecionalmente. Me caracterizo por 
+        mi actitud y mi compromiso en cada proyecto que realizo. 
+        Busco oportunidades que me permitan aplicar lo que se y 
+        aprender nuevas habilidades.
     </div>
-  </section>
 
-  <section id="habilidades">
     <h2>Habilidades</h2>
-    <div class="habilidades">
-      <div class="habilidad">
-        <h3>Habilidades Creativas</h3>
-        <span>Pensamiento creativo</span>
-        <span>Resolución de problemas</span>
-        <span>Diseño 3D</span>
-      </div>
-      <div class="habilidad">
-        <h3>Habilidades Personales</h3>
-        <span>Gestión del tiempo</span>
-        <span>Aprendizaje Rápido</span>
-        <span>Responsabilidad</span>
-        <span>Organización</span>
-      </div>
-      <div class="habilidad">
-        <h3>Habilidades Sociales</h3>
-        <span>Trabajo en equipo</span>
-        <span>Comunicación</span>
-        <span>Adaptabilidad</span>
-        <span>Liderazgo</span>
-      </div>
-    </div>
-  </section>
 
-  <section id="proyectos">
-    <h2>Proyectos y Experiencias</h2>
-    <p>Algunos de mis trabajos y logros más importantes</p>
-    <div class="proyectos">
-      <div class="proyecto">
-        <img src="https://cdn-icons-png.flaticon.com/512/2721/2721267.png" alt="App Web Educativa">
-        <h4>App Web Educativa</h4>
-        <p>Desarrollo de página web para aprender o utilizar billeteras virtuales sin riesgo.</p>
-      </div>
-      <div class="proyecto">
-        <img src="https://cdn-icons-png.flaticon.com/512/2942/2942888.png" alt="Trabajo en Equipo">
-        <h4>Trabajo en Equipo</h4>
-        <p>Organización y trabajo en grupo de proyectos escolares y fuera de la escuela.</p>
-      </div>
-      <div class="proyecto">
-        <img src="https://cdn-icons-png.flaticon.com/512/3242/3242257.png" alt="Proyecto Digital">
-        <h4>Proyecto Digital</h4>
-        <p>Desarrollo de UI/UX en proyectos escolares.</p>
-      </div>
-    </div>
-  </section>
+    <div class="skills-grid">
 
-  <section id="contacto">
-    <h2>Contacto</h2>
-    <p>¿Tenés alguna pregunta? No dudes en contactarme</p>
-    <div class="contacto">
-      <h3>Información de contacto</h3>
-      <p>Podes contactarme a través de estos medios:</p>
-      <div class="info-contacto">
-        <div><img src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Email"> <span>48242726@est.ort.edu.ar</span></div>
-        <div><img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Teléfono"> <span>+54 9 11 4564-3212</span></div>
-      </div>
+        <div class="skill-box">
+            <div class="skill-title">Habilidades Creativas</div>
+            <div class="tags">
+                <div class="tag">Pensamiento creativo</div>
+                <div class="tag">Resolución de problemas</div>
+                <div class="tag">Diseño Básico</div>
+                <div class="tag">Presentación</div>
+                <div class="tag">Diseño 3D</div>
+            </div>
+        </div>
+
+        <div class="skill-box">
+            <div class="skill-title">Habilidades Personales</div>
+            <div class="tags">
+                <div class="tag">Gestión del tiempo</div>
+                <div class="tag">Aprendizaje rápido</div>
+                <div class="tag">Responsabilidad</div>
+                <div class="tag">Organización</div>
+            </div>
+        </div>
+
+        <div class="skill-box small">
+            <div class="skill-title">Habilidades Sociales</div>
+            <div class="tags">
+                <div class="tag">Trabajo en Equipo</div>
+                <div class="tag">Comunicación</div>
+                <div class="tag">Adaptabilidad</div>
+                <div class="tag">Liderazgo</div>
+            </div>
+        </div>
+
     </div>
-  </section>
+
+    <h2>Proyectos y Experiências</h2>
+    <p class="sub">Algunos de mis trabajos y logros mas importantes</p>
+
+    <div class="proj-row">
+
+        <div class="project">
+            <div class="proj-icon">
+                <img src="manteca.png" alt="Manteca Clicker">
+            </div>
+            <div class="project-title">Manteca Clicker</div>
+            <p>Primer proyecto de la especialidad, encargado del UX/UI</p>
+        </div>
+
+        <div class="project">
+            <div class="proj-icon">
+                <img src="wallet-tic.png" alt="Wallet Tic">
+            </div>
+            <div class="project-title">Wallet Tic</div>
+            <p>Segundo proyecto de la especialidad, encargado del UX/UI</p>
+        </div>
+
+        <div class="project">
+            <div class="proj-icon">
+                <img src="wallet-simulator.png" alt="Wallet Simulator">
+            </div>
+            <div class="project-title">Wallet Simulator</div>
+            <p>Ultimo proyecto de la especialidad, encargado del UX/UI</p>
+        </div>
+
+    </div>
+
+    <h2 class="contact-title">Contacto</h2>
+    <p class="contact-sub">¿Tenes alguna pregunta? No dudes en contactarme</p>
+
+    <div class="contact-box">
+        <h3>Información de contacto</h3>
+        <p>Podes contactarme a traves de estos medios</p>
+
+        <p>📧 Email: 48242726@est.ort.edu.ar</p>
+        <p>📞 Teléfono: +54 9 11 4564-3212</p>
+    </div>
+
+</div>
 
 </body>
 </html>
